Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-Jun-2012 Christophe Demko
 ^ [#28378] Backport JInput:def() from the platform (Rouven Weßling)

05-Jun-2012 Jean-Marie Simonet
 # [#28619] Fix #24510 to not add code specific to the profile plug-in to com_users. Thanks Rouven.
 +# [#28565] Add feature readmore in feed items. Also bugfix for fulltext in feed items. Thanks Jurian
 + [#28469] Add counter to redirect component. Thanks Ronald

04-Jun-2012 Jean-Marie Simonet
 + [#28067] Option to disable the ability to change the Username in Profile
 + [#24510] Implementation of Terms of Service. Thanks Peter.
 + [#28614] Add option to enable/disable logging in Smart Search. Thanks Michael.
 # [#28615] Backport union query element from Platform 12 and use it in Smart Search. Thanks Michael.

03-Jun-2012 Mark Dexter
 ^ [#28450] Set the CSS class for JForm field label. Thanks Viet Vu.

03-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini files: nb-NO, nl-NL, nn-NO
 # [#28602] *Menu Item Manager: Show Batch Processing only if allowed. Thanks Johannes
 # [#28611] *ACL: Module Manager: Show Batch Processing only if allowed
 # [#28536] Undefined variable $prev in com_config. Thanks Rouven
 # [#28607] Missing direct access check for com_finder. Thanks Sander
 ^ [#28609] Update joomlaupdate @SInCE tags missed in 61f5ee8. Thanks Rouven
 # [#28285] E_NOTICE about array to string conversion in debug.php with PHP 5.4. Thanks Rouven
 # [#28560] Backport some files completely from the current platform. Thanks Rouven
 # [#28599] Backport the new JLoader from the platform 12.1. Thanks Rouven
 ^ [#28600] Add a code style checker. Thanks Rouven
 # [#28548] Use instanceof instead of is_a(). Thanks Rouven.

02-Jun-2012 Jean-Marie Simonet